traversal.snake.Snake.scala.error
Compilation error:
Snake:19: warning: enclosing method testmur has result type Unit: return value discarded
  return x
  ^Snake:30: error: value estEST is not a member of object plm.universe.Direction
      if (getDirection()==Direction.estEST){
                                    ^